fixed alignment issue with input box and text over input

--- a/Startup_Sample/startup_landing.css
+++ b/Startup_Sample/startup_landing.css
@@ -11,7 +11,7 @@ body {
   margin-top: 0;
 }
 
-li {
+li  {
   font-family: 'PT Serif', serif;
   color: white;
   display: inline;
@@ -19,16 +19,35 @@ li {
   float:right;
 }
 
+a:link {
+    color: #FF0000;
+}
 input {
   width: 50%;
-  line-height: 20px;
-  height: 30px;
+  line-height: 50px;
+  width: 500px;
+  background: rgba(255,255, 255, 0.15);
   margin: auto;
+  margin-left: 30%;
+  font-size: 25px;
+  border: rgba(255, 0, 0, 0.5);
+  clear: right;
+  text-align: center;
+  align-items: center;
+  -webkit-appearance: none;
 }
 
 #intro_text h1 {
   font-family: 'Open Sans', sans-serif;
+  text-align: center;
   color: white;
-  padding-top: 50%;
-  padding-left: 30%;
+  clear: right;
+  text-align: center;
+  padding-top: 30%;
+}
+
+#footer{
+  text-align: center;
+  color: white;
+  padding-top: 100%;
 }
